Added a line break after each sentence.

--- a/chapter-coulomb-scattering.tex
+++ b/chapter-coulomb-scattering.tex
@@ -3,7 +3,9 @@
 
 \section{Leading order calculation}
 
-We consider in this section the scattering of an electron by an atomic nucleus of atomic number $Z$. We model the nucleus by a classical point charge without magnetic moment, being at rest at the origin in the lattice reference frame and having a mass much higher than the mass of the electron. The corresponding electromagnetic field is described as a classical Coulomb potential $\V^{cl}$ given in terms of Fourier components by:
+We consider in this section the scattering of an electron by an atomic nucleus of atomic number $Z$.
+We model the nucleus by a classical point charge without magnetic moment, being at rest at the origin in the lattice reference frame and having a mass much higher than the mass of the electron.
+The corresponding electromagnetic field is described as a classical Coulomb potential $\V^{cl}$ given in terms of Fourier components by:
 \begin{eqnarray*}
 \V^{cl}_{\n} & \eqdef & ( 1 + 2 \N )^{-3} \sum_{\q_\photon \neq \sv 0} \FT \V^{cl}_{\q_\photon} \exp{\i 2 \pi \n \ssp \q_\photon} \\
 \FT \V^{cl}_{\q_\photon} & \eqdef & \frac{Z \e}{4 \pi^2 \vpty \a q_\photon^2}
@@ -32,7 +34,8 @@ and the leading order transition probability for this process is also represente
 \begin{center}
 \includegraphics[scale=0.2]{images/diagrams/Coulomb_Scattering.pdf}
 \end{center}
-We consider a detector capturing the electrons having their momentum in the solid angle $\delta \Omega$. For $i \notin \delta \F$, the leading order transition probability takes the form:
+We consider a detector capturing the electrons having their momentum in the solid angle $\delta \Omega$.
+For $i \notin \delta \F$, the leading order transition probability takes the form:
 \begin{eqnarray*}
 \TPn i {\delta \F} 2 & \approx & \int_{\delta \Omega} \int_0^{\infty} ( 2 \pi )^2 \frac{t - t_0} \h \left| H'_{f + \delta \q,i} \right|^2 \deltaE2{E_{f + \delta \q} - E_i} \\
 && \left( (1 + 2 \N) \frac \a \h \right)^3 p^2 \dnp \dO
