--- a/chapter-usual-functions.tex
+++ b/chapter-usual-functions.tex
@@ -26,7 +26,8 @@ In this document, the esinc function is defined by:
 \begin{equation*}
 \esinc{X} \eqdef \exp{\i \pi X} \sinc{X}
 \end{equation*}
-where the sinc function is defined as in appendix \ref{sinc}. This function admits following integral expression:
+where the sinc function is defined as in appendix \ref{sinc}.
+This function admits following integral expression:
 \begin{equation*}
 \esinc{X} = \frac 1 X \int_0^X \exp{\i 2 \pi x} \dx
 \end{equation*}
@@ -47,7 +48,8 @@ In this document, we make use of following nascent delta functions, which conver
 \deltaE1{E} & \eqdef & \frac{t - t_0} \h \sinc{\frac{t - t_0} \h E} \\
 \deltaE2{E} & \eqdef & \frac{t - t_0} \h \sinc{\frac{t - t_0} \h E}^2
 \end{eqnarray*}
-where the sinc function is defined as in appendix \ref{sinc}. The square of the first one can be expressed in terms of the second one as:
+where the sinc function is defined as in appendix \ref{sinc}.
+The square of the first one can be expressed in terms of the second one as:
 \begin{equation*}
 \deltaE1{E}^2 = \frac{t - t_0} \h \deltaE2{E}
 \end{equation*}
@@ -56,7 +58,8 @@ We also make use of following family of functions converging to a distribution a
 \begin{equation*}
 \deltaE\PV{E} \eqdef 2 \frac{t - t_0} \h \esinc{\frac{t - t_0} \h E}
 \end{equation*}
-where the esinc function is defined as in appendix \ref{esinc}. Its limit is given by:
+where the esinc function is defined as in appendix \ref{esinc}.
+Its limit is given by:
 \begin{equation*}
 \lim_{t - t_0 \to \infty} \deltaE\PV{E} = \delta(E) + \frac \i \pi \PV \left( \frac 1 E \right)
 \end{equation*}
