--- a/frontmatter-acknowledgements.tex
+++ b/frontmatter-acknowledgements.tex
@@ -1,6 +1,9 @@
 \cleardoublepage
 \section*{Acknowledgements}
 
-First and foremost, I would like to thank my wife Angela for having let me enjoy her wisdom and love radiating being for all these years. She made me discover Spinoza's philosophy and this publication would never have been possible without the help of her brilliant intelligence, of her constructive criticism, of all her love and support. Thank you!
+First and foremost, I would like to thank my wife Angela for having let me enjoy her wisdom and love radiating being for all these years.
+She made me discover Spinoza's philosophy and this publication would never have been possible without the help of her brilliant intelligence, of her constructive criticism, of all her love and support.
+Thank you!
 
-I would also like to thank my colleague Markus Matteucci for initiating me into the art of book publishing, my fellow students Christian Hagendorf and Tristan Machado for some fruitful discussions that did much for my understanding of Physics, my teachers Christian Swit and Stéphane Gentil who introduced me to the joys of Philosophy and Mathematics, my uncle Bertrand Liaudet and my regretted ``godfather'' Frédéric Poupaud for having made me discover the world of Algorithmic and Informatics at a far too early age. They all did very much for my personal evolution.
+I would also like to thank my colleague Markus Matteucci for initiating me into the art of book publishing, my fellow students Christian Hagendorf and Tristan Machado for some fruitful discussions that did much for my understanding of Physics, my teachers Christian Swit and Stéphane Gentil who introduced me to the joys of Philosophy and Mathematics, my uncle Bertrand Liaudet and my regretted ``godfather'' Frédéric Poupaud for having made me discover the world of Algorithmic and Informatics at a far too early age.
+They all did very much for my personal evolution.
