--- a/chapter-stochastic-evolution.tex
+++ b/chapter-stochastic-evolution.tex
@@ -10,7 +10,11 @@ In the joint evolution of the mental and quantum states of the universe, I suppo
 \begin{equation*}
 P(\cms) = \frac{\bra\Psi \op{\Pi}_\cms \ket\Psi}{\braket\Psi\Psi}
 \end{equation*}
-where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$. Furthermore, I suppose that this projection corresponds to the fact that, in the mental world, the mental state $\cms = \bFM N \ims$ is being experienced, \textit{i.e.} that $\bM N \ims$ subjects are having each possible subjective experience $\ims$. We call the material part of this process ``collapse'' of the quantum state of the universe and its mental counterpart ``selection'' of the mental state. The operators $\op{\Pi}_\cms$ are called ``collapse operators''. As a working hypothesis, we assume that the period $\tau$ of this process is of the order of the Plank time:
+where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$.
+Furthermore, I suppose that this projection corresponds to the fact that, in the mental world, the mental state $\cms = \bFM N \ims$ is being experienced, \textit{i.e.} that $\bM N \ims$ subjects are having each possible subjective experience $\ims$.
+We call the material part of this process ``collapse'' of the quantum state of the universe and its mental counterpart ``selection'' of the mental state.
+The operators $\op{\Pi}_\cms$ are called ``collapse operators''.
+As a working hypothesis, we assume that the period $\tau$ of this process is of the order of the Plank time:
 \begin{equation*}
 \tau \approx \sqrt{4\pi\G \h/\c^5}\approx4.8~10^{-43}\ \mathrm s
 \end{equation*}
@@ -18,7 +22,8 @@ where $\op{\Pi}_\cms$ is the orthogonal projection operator on $\H_\cms$. Furthe
 \section{Mental evolution}
 \label{Mental evolution}
 
-Fundamentally, Quantum Field Theory also defines the probability that any given succession of mental states be experienced, an initial quantum state being given. Explicitly, for an initial quantum state $\ket{\Psi_i} \neq 0$ at time $t_i = 0$, the probability $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})$, where $t \in \IN$, that a given sequence $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$, reads for $t = 0$:
+Fundamentally, Quantum Field Theory also defines the probability that any given succession of mental states be experienced, an initial quantum state being given.
+Explicitly, for an initial quantum state $\ket{\Psi_i} \neq 0$ at time $t_i = 0$, the probability $\mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})$, where $t \in \IN$, that a given sequence $\cms_0, \dotsc, \cms_t$ is being experienced at times $0, \dotsc, t \tau$, reads for $t = 0$:
 \begin{equation*}
 \mathrm P_0(\cms_0; \ket{\Psi_i}) = \bra{\Psi_i} \op \Pi_{\cms_0} \ket{\Psi_i} / \braket{\Psi_i}{\Psi_i}
 \end{equation*}
@@ -51,17 +56,21 @@ and more generally for $t \geq 1$:
 P_t(\cms_t; \ket{\Psi_i}) = \sum_{\cms_{t - 1}} \dotsm \sum_{\cms_0} \mathrm P_t(\cms_0, \dotsc, \cms_t; \ket{\Psi_i})
 \end{equation*}
 
-\paragraphtitle{Complements} In the case where the actually experienced mental state has a relatively high probability, our subjective experience may give us some clues about the physics of the world we live in; on the opposite, if our mental state has a very low probability, our subjective experience has very little to do with the laws of the physical world and we live in a mere illusion of knowing something about the material reality -- without having any mean of noticing it. This dilemma is very well known of particle physicists, who have to accept they cannot make more precise statements about reality than, for instance, ``in the context of the standard model and in the presence of a sequential fourth family of fermions with high masses [...] a Higgs boson with mass between 144 and 207 GeV/$\mathrm{c}^2$ is ruled out at 95\% confidence level''~\cite{CMS2011}. Any physical model can also be conventionally, but not definitely, ``ruled out'' if it predicts the observed results with a probability considered to be too low.
+\paragraphtitle{Complements} In the case where the actually experienced mental state has a relatively high probability, our subjective experience may give us some clues about the physics of the world we live in; on the opposite, if our mental state has a very low probability, our subjective experience has very little to do with the laws of the physical world and we live in a mere illusion of knowing something about the material reality -- without having any mean of noticing it.
+This dilemma is very well known of particle physicists, who have to accept they cannot make more precise statements about reality than, for instance, ``in the context of the standard model and in the presence of a sequential fourth family of fermions with high masses [...] a Higgs boson with mass between 144 and 207 GeV/$\mathrm{c}^2$ is ruled out at 95\% confidence level''~\cite{CMS2011}.
+Any physical model can also be conventionally, but not definitely, ``ruled out'' if it predicts the observed results with a probability considered to be too low.
 
 \section{Transition probability}
 
-We consider, to simplify the discussion, a repeated experiment with a single possible outcome, which may have been realized or not after a given duration $t \tau$. Notice that this duration doesn't correspond to the instant at which some physical event occurs, but is a sufficiently long duration after which the experimenter can consciously remember of having (just) observed the expected outcome or not.
+We consider, to simplify the discussion, a repeated experiment with a single possible outcome, which may have been realized or not after a given duration $t \tau$.
+Notice that this duration doesn't correspond to the instant at which some physical event occurs, but is a sufficiently long duration after which the experimenter can consciously remember of having (just) observed the expected outcome or not.
 
 The possible mental states corresponding to the beginning of the experiment are written $\cms_i$ and the initial state of the quantum fields is also an element of the Hilbert subspace $\H_i$ given by:
 \begin{equation*}
 \H_i = \bigoplus_{\cms_i}^\perp \H_{\cms_i}
 \end{equation*}
-The possible mental states corresponding to the measurement of the given outcome resp. of its absence are written $\cms_f^+$ resp. $\cms_f^-$. If the experiment works correctly, the final state of the quantum fields is, after measurement, an element of either of the Hilbert subspaces $\H_f^+$ or $\H_f^-$ given by:
+The possible mental states corresponding to the measurement of the given outcome resp. of its absence are written $\cms_f^+$ resp. $\cms_f^-$.
+If the experiment works correctly, the final state of the quantum fields is, after measurement, an element of either of the Hilbert subspaces $\H_f^+$ or $\H_f^-$ given by:
 \begin{equation*}
 \H_f^\pm = \bigoplus_{\cms_f^\pm}^\perp \H_{\cms_f^\pm}
 \end{equation*}
@@ -71,13 +80,17 @@ The absolute probability of measuring the given outcome resp. its absence is giv
 \begin{equation*}
 \TP{\H_i}{\H_f^\pm} = \sum_{\cms_{t - 1}} \dotsm \sum_{\cms_1} \mathrm{Tr}_{\H_i} \dop U_\tau \op \Pi_{\cms_1} \dotsm \dop U_\tau \op \Pi_{f^\pm} \op U_\tau \dotsm \op \Pi_{\cms_1} \op U_\tau / \mathrm{dim} \H_i
 \end{equation*}
-where $\op \Pi_{f^\pm} = \sum_{\cms_f^\pm} \op \Pi_{\cms_f^\pm}$. The conditional probability of measuring the given outcome if the experiment doesn't fail is then given by:
+where $\op \Pi_{f^\pm} = \sum_{\cms_f^\pm} \op \Pi_{\cms_f^\pm}$.
+The conditional probability of measuring the given outcome if the experiment doesn't fail is then given by:
 \begin{equation*}
 \mathcal T \TP{\H_i}{\H_f^+} = \frac{\TP{\H_i}{\H_f^+}}{\TP{\H_i}{\H_f^+} + \TP{\H_i}{\H_f^-}}
 \end{equation*}
 and we call it ``transition probability'' from $\H_i$ to $\H_f^+$.
 
-If the experiment is conceived in such a way that the studied system is isolated from the observer for the duration of the experiment until it interacts with some measurement apparatus, the experiment is considered to have failed if the observer has gained some information about the studied system before it interacts with this apparatus. An intermediate observation of the system, as it would leave a permanent trace in the memory of the observer, would lead with a vanishingly small probability to a final mental state in which the observer isn't conscious of having made this observation. The only intermediate mental states $\cms_1, \dotsc, \cms_{t - 1}$ to be considered in the above sums (\textit{i.e.} which haven't a vanishingly small contribution to the transition probability) correspond also to projectors that don't affect the Hamiltonian evolution of the studied system. In that case, the absolute probability of measuring the given outcome resp. its absence can be approximated by:
+If the experiment is conceived in such a way that the studied system is isolated from the observer for the duration of the experiment until it interacts with some measurement apparatus, the experiment is considered to have failed if the observer has gained some information about the studied system before it interacts with this apparatus.
+An intermediate observation of the system, as it would leave a permanent trace in the memory of the observer, would lead with a vanishingly small probability to a final mental state in which the observer isn't conscious of having made this observation.
+The only intermediate mental states $\cms_1, \dotsc, \cms_{t - 1}$ to be considered in the above sums (\textit{i.e.} which haven't a vanishingly small contribution to the transition probability) correspond also to projectors that don't affect the Hamiltonian evolution of the studied system.
+In that case, the absolute probability of measuring the given outcome resp. its absence can be approximated by:
 \begin{equation*}
 \TP{\H_i}{\H_f^\pm} \approx \mathrm{Tr}_{\H_i} \dop U_{t \tau} \op \Pi_{f^\pm} \op U_{t \tau} / \mathrm{dim} \H_i
 \end{equation*}
@@ -98,7 +111,8 @@ If $i$ and $f$ are plane wave states, these terms can be written using the scatt
 
 \section{Leading order transition probability}
 
-The general form of the transition probability between plane wave modes of the field can be given without knowing much about the interaction term $\Hop'$. We assume here that the initial and final states of the field are plane waves of the form:
+The general form of the transition probability between plane wave modes of the field can be given without knowing much about the interaction term $\Hop'$.
+We assume here that the initial and final states of the field are plane waves of the form:
 \begin{eqnarray*}
 \ket{\Psi_i} & = & \ket{\bFQ {N_i} \pt \q \sp} \\
 \ket{\Psi_f} & = & \ket{\bFQ {N_f} \pt \q \sp}
@@ -123,7 +137,8 @@ To the order $n \geq 2$, the transition probability between plane wave states $\
 & = & \delta_{f,i} \sideset{}{_{k=1}^{n-1}}\sum_{\bFQ {N_k} \pt \q \sp} \left( \Smp n {i,\dotsc,i} + \cc{\Smp n {i,\dotsc,i}} \right) \\
 && + \sum_{\substack{n_1 + n_2 = n \\ n_1, n_2 \geq 1}} \cc{\Smn f i {n_1}} \Smn f i {n_2}
 \end{eqnarray*}
-The first term vanishes for $f \neq i$. The development of the last term involves a ``closed loop'' of length $n$ from $i$ to $i$ over $f$, \textit{i.e.} a summation over $n - 2$ intermediate states $\ket{\bFQ {N_k} \pt \q \sp}$, where $k \in \IntRange{-n_1}{n_2}$, $\bFQ {N_0} \pt \q \sp = \bFQ {N_i} \pt \q \sp$ and $\bFQ {N_{-n_1}} \pt \q \sp = \bFQ {N_{n_2}} \pt \q \sp = \bFQ {N_f} \pt \q \sp$, and can be written as:
+The first term vanishes for $f \neq i$.
+The development of the last term involves a ``closed loop'' of length $n$ from $i$ to $i$ over $f$, \textit{i.e.} a summation over $n - 2$ intermediate states $\ket{\bFQ {N_k} \pt \q \sp}$, where $k \in \IntRange{-n_1}{n_2}$, $\bFQ {N_0} \pt \q \sp = \bFQ {N_i} \pt \q \sp$ and $\bFQ {N_{-n_1}} \pt \q \sp = \bFQ {N_{n_2}} \pt \q \sp = \bFQ {N_f} \pt \q \sp$, and can be written as:
 \begin{multline*}
 \sum_{\substack{n_1 + n_2 = n \\ n_1, n_2 \geq 1}} \sideset{}{_{k=-n_1}^{n_2}}\sum_{\bFQ {N_k} \pt \q \sp} \left( \prod_{k = -n_1}^{n_2 - 1} H'_{k+1,k} \right) \cc{\SmE{n_1}{E_{-n_1}, \dotsc, E_0}} \SmE{n_2}{E_{n_2}, \dotsc, E_0}
 \end{multline*}
@@ -138,7 +153,10 @@ where the nascent delta function $\deltaE1{E}$ is defined as in appendix \ref{de
 
 \section{Ideal experimental setup}
 
-We consider a scattering experiment designed to produce $n_f$ particles of type $\pt_j$, of wave vector $\q_j$ and of spin state $\sp_j$. To detect them all, a set of $n_f$ particle detectors $D_j$ is being used and we consider a single alternative: either all the detectors are activated or at least one of them isn't. The momentum of the detected particles is measured with an uncertainty given by the domain $\delta P_j$ of the momentum space in which particle $j$ could be found without changing the measurement result. The corresponding subset $\delta Q_j$ of values of $\q_j$ is given in the lattice reference frame by:
+We consider a scattering experiment designed to produce $n_f$ particles of type $\pt_j$, of wave vector $\q_j$ and of spin state $\sp_j$.
+To detect them all, a set of $n_f$ particle detectors $D_j$ is being used and we consider a single alternative: either all the detectors are activated or at least one of them isn't.
+The momentum of the detected particles is measured with an uncertainty given by the domain $\delta P_j$ of the momentum space in which particle $j$ could be found without changing the measurement result.
+The corresponding subset $\delta Q_j$ of values of $\q_j$ is given in the lattice reference frame by:
 \begin{equation*}
 \delta Q_j = \FLD \cap \frac \a \h \delta P_j
 \end{equation*}
@@ -168,17 +186,24 @@ In particular, if $\left| H'_{f + (\delta \q_j),i} \right|^2$ admits such a cont
 \section{Quantum measurement}
 \label{Quantum measurement}
 
-Let us consider a simple thought experiment in order to illustrate how measurement processes take place: An excited atom decays by emitting a photon, which is detected by a photomultiplier read by an observer. In the initial state, at time $t_0$, the atom has just been switched to its excited state and hasn't decayed yet, the measurement apparatus is indicating that it hasn't yet detected any photon and the observer is waiting for the detector to get activated. We symbolize this situation by:
+Let us consider a simple thought experiment in order to illustrate how measurement processes take place: An excited atom decays by emitting a photon, which is detected by a photomultiplier read by an observer.
+In the initial state, at time $t_0$, the atom has just been switched to its excited state and hasn't decayed yet, the measurement apparatus is indicating that it hasn't yet detected any photon and the observer is waiting for the detector to get activated.
+We symbolize this situation by:
 \begin{flushleft}
 \ExcitedAtom\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \end{flushleft}
-The decay of the excited atom into a stable atom and a photon (via the QED processes described in chapter \ref{Quantum Electrodynamics}) first brings it into a quantum superposition of states, where both states coexist as a linear combination within the quantum state $\ket{\psi}$ of the universe. In both cases, the measurement apparatus is still inactive so far and the observer waiting. We symbolize this situation by:
+The decay of the excited atom into a stable atom and a photon (via the QED processes described in chapter \ref{Quantum Electrodynamics}) first brings it into a quantum superposition of states, where both states coexist as a linear combination within the quantum state $\ket{\psi}$ of the universe.
+In both cases, the measurement apparatus is still inactive so far and the observer waiting.
+We symbolize this situation by:
 \begin{flushleft}
 \ExcitedAtom\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \hspace*{3mm}\Superposition\hspace*{3mm}
 \Atom\hspace*{3mm}\Photon\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \end{flushleft}
-Supposing, to simplify, that the photomultiplier has a detection efficiency of 100\%, it gets activated with certainty by the incoming photon after a certain delay $\Delta t$, coming thus itself into a quantum superposition of states. At the same time, the excited atom populates again the decayed atom state, as in the preceding step. In all three cases, the observer is still waiting that far. We symbolize this situation by:
+Supposing, to simplify, that the photomultiplier has a detection efficiency of 100\%, it gets activated with certainty by the incoming photon after a certain delay $\Delta t$, coming thus itself into a quantum superposition of states.
+At the same time, the excited atom populates again the decayed atom state, as in the preceding step.
+In all three cases, the observer is still waiting that far.
+We symbolize this situation by:
 \begin{flushleft}
 \ExcitedAtom\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \hspace*{3mm}\Superposition\hspace*{3mm}
@@ -186,7 +211,8 @@ Supposing, to simplify, that the photomultiplier has a detection efficiency of 1
 \hspace*{3mm}\Superposition\hspace*{3mm}
 \Atom\hspace*{3mm}\DetectorOn\hspace*{3mm}\ObserverOff
 \end{flushleft}
-Finally, the observer is becoming aware of the fact that the detector has been activated and comes herself into a quantum superposition of states, so that four qualitatively different states coexist as a linear combination within the quantum state $\ket{\psi}$ of the universe. We symbolize this situation by:
+Finally, the observer is becoming aware of the fact that the detector has been activated and comes herself into a quantum superposition of states, so that four qualitatively different states coexist as a linear combination within the quantum state $\ket{\psi}$ of the universe.
+We symbolize this situation by:
 \begin{flushleft}
 \ExcitedAtom\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \hspace*{3mm}\Superposition\hspace*{3mm}
@@ -196,7 +222,9 @@ Finally, the observer is becoming aware of the fact that the detector has been a
 \hspace*{3mm}\Superposition\hspace*{3mm}
 \Atom\hspace*{3mm}\DetectorOn\hspace*{3mm}\ObserverOn
 \end{flushleft}
-This (purely material) situation lasts until the next process of collapse and mental state selection takes place. The experienced consciousness state of the observer is then, randomly, either one of ``I am still waiting for the detector to get activated'' or ``I have seen the detector becoming activated''. In the first case, the quantum state of the universe becomes again:
+This (purely material) situation lasts until the next process of collapse and mental state selection takes place.
+The experienced consciousness state of the observer is then, randomly, either one of ``I am still waiting for the detector to get activated'' or ``I have seen the detector becoming activated''.
+In the first case, the quantum state of the universe becomes again:
 \begin{flushleft}
 \ExcitedAtom\hspace*{3mm}\DetectorOff\hspace*{3mm}\ObserverOff
 \hspace*{3mm}\Superposition\hspace*{3mm}
@@ -204,15 +232,19 @@ This (purely material) situation lasts until the next process of collapse and me
 \hspace*{3mm}\Superposition\hspace*{3mm}
 \Atom\hspace*{3mm}\DetectorOn\hspace*{3mm}\ObserverOff
 \end{flushleft}
-\textit{i.e.} the detector has still been activated, but the observer didn't yet notice it. In the second case, the state of the universe becomes:
+\textit{i.e.} the detector has still been activated, but the observer didn't yet notice it.
+In the second case, the state of the universe becomes:
 \begin{flushleft}
 \Atom\hspace*{3mm}\DetectorOn\hspace*{3mm}\ObserverOn
 \end{flushleft}
-and the atom has definitely decayed. The probability $\delta P$ of this event to occur is very small, but the process of collapse and mental state selection take place very often, with a period $\tau$, so that the decay of the atom should eventually be observed. The leading order approximation of this elementary probability takes the form:
+and the atom has definitely decayed.
+The probability $\delta P$ of this event to occur is very small, but the process of collapse and mental state selection take place very often, with a period $\tau$, so that the decay of the atom should eventually be observed.
+The leading order approximation of this elementary probability takes the form:
 \begin{equation*}
 \delta P \approx ( 2 \pi )^2 \frac\tau\h \sum_f \left| H'_{f,i} \right|^2 \deltaE2{E_f - E_i}
 \end{equation*}
-where the Coulomb interaction term is supposed to have been shifted into the zeroth order Hamiltonian operator $\Hop_0$, where the summation runs over an orthonormal basis of eigenstates of this operator and where the delta function can be approximated by the (time independent) density of decay states (with regard to energy) around the ``allowed'' decay states conserving zeroth order energy. The duration until the decay is being observed follows a Poisson law and its mean value is given by the general formula:
+where the Coulomb interaction term is supposed to have been shifted into the zeroth order Hamiltonian operator $\Hop_0$, where the summation runs over an orthonormal basis of eigenstates of this operator and where the delta function can be approximated by the (time independent) density of decay states (with regard to energy) around the ``allowed'' decay states conserving zeroth order energy.
+The duration until the decay is being observed follows a Poisson law and its mean value is given by the general formula:
 \begin{equation*}
 \left< t - t_0 \right> \approx \Delta t + \tau \frac{1 - \delta P}{\delta P}
 \end{equation*}
